# vmware-fusion-wrapper

./: Cargo.toml  README.md
.github/workflows/: cargo.yml
src/: lib.rs  main.rs
