[package]
name = "vms"
description = "VMWare Fusion Wrapper CLI"
version = "0.1.0"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
edition = "2018"


[dependencies]
anyhow = "1"
env_logger = "0.7.1"
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.5"
shellexpand = "2.0.0"
structopt = { version = "0.3", default-features = false }
walkdir = "2"